# adventofcode2024-leaderboard

./: Cargo.toml  README.md
.github/: rust_test.yml
.github/workflows/: bench.yaml
aoc-bench/: Cargo.toml
aoc-bench-parser/: Cargo.toml
aoc-bench-parser/src/: main.rs
aoc-bench/inputs/: day01.txt.age  day02.txt.age  day03.txt.age  day04.txt.age  day05.txt.age  day06.txt.age  day07.txt.age  day08.txt.age  day09.txt.age  day10.txt.age  day11.txt.age  day12.txt.age  day13.txt.age  day14.txt.age  day15.txt.age  day16.txt.age  day17.txt.age  day18.txt.age  day19.txt.age  day20.txt.age  day21.txt.age  day22.txt.age  day23.txt.age  day24.txt.age  day25.txt.age
aoc-bench/src/: main.rs
aoc-traits/: Cargo.toml
aoc-traits/src/: lib.rs
